[project]
name = "stress-injector"
dynamic = ["version", "dependencies"]
description = "Python module, to inject memory and CPU stress, and URL load test"
readme = "README.md"
authors = [{ name = "Vignesh Sivanandha Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
keywords = ["stress-test", "numpy-arrays", "cpu-stress", "memory-stress",
            "url-stress", "multiprocessing", "multithreading"]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["stressinjector"]

[tool.setuptools.dynamic]
version = {attr = "stressinjector.version"}
dependencies = {file = ["stressinjector/requirements.txt"]}

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pre-commit"]

[project.urls]
Homepage = "https://github.com/thevickypedia/stress-injector"
Docs = "https://thevickypedia.github.io/stress-injector/"
Source = "https://github.com/thevickypedia/stress-injector"
"Bug Tracker" = "https://github.com/thevickypedia/stress-injector/issues"
"Release Notes" = "https://github.com/thevickypedia/stress-injector/blob/main/release_notes.rst"
